deployments/k8s/nc-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nc-prod
  labels:
    app.kubernetes.io/part-of: nc
    app.kubernetes.io/environment: production
